<?xml version="1.0"?>
<package>
  <name>rc_read</name>
  <version>0.0.0</version>
  <description>The rc_read package</description>

  <maintainer email="paul@todo.todo">paul</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>relative_nav_msgs</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>relative_nav_msgs</run_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
